2016-01-13  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37550: Completion/BSD/Command/_cu: _cu: Support Linux
	line-device names; fail gracefully on OSes matching no known
	line-device name pattern.

2016-01-10  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37551: Src/builtin.c: Include the builtin's name in a "bad
	option" error message.

2016-01-10  Eric Cook <llua@gmx.com>
	* 37534: Matthew Martin: Completion/BSD/Command/_cu,
	Completion/BSD/Command/_fw_update, Completion/BSD/Command/_rcctl

2016-01-08  Barton E. Schaefer  <schaefer@zsh.org>

	* Jun T.: 37515: Src/Modules/pcre.c, Test/V07pcre.ztst: multibyte
	handling as per 35448.

	* unposted (cf. Jun T.: 37516): Src/builtin.c: refine READ_MSTREAM
	to avoid unsequenced evaluation

2016-01-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 37513 (cf. Jun T.: 37508): Src/builtin.c: fix typos; improve
	error cleanup in tempfile case of ASSIGN_MSTREAM(); simplify
	READ_MSTREAM() and correct for signed/unsigned compiler warning

2016-01-04  Barton E. Schaefer  <schaefer@zsh.org>

	* 37504: Src/builtin.c: refactor code using/simulating memstream
	to capture output for "print -v"

	* 37503: Src/builtin.c: detect incompatible "print" options, fix
	metafication and possible memory leak, miscellaneous cosmetics

	* Jun T. (+ revise test): 37501: Src/builtin.c, Test/B03print.ztst:
	correct byte counts when simulating memstream via temp file

2016-01-02  Barton E. Schaefer  <schaefer@zsh.org>

	* 37497: Src/builtin.c: handle NUL bytes in "printf -v".

	* 37493: Doc/Zsh/builtins.yo, Src/builtin.c, Src/hashtable.h,
	Test/B02typeset.ztst: readonly + POSIX_BUILTINS == typeset -gr

2016-01-01  Barton E. Schaefer  <schaefer@zsh.org>

	* 37483: Src/glob.c: save and possibly restore cshnullglob failure
	state around each evaluation of an (e:...:) glob qualifier.

	* 37473: Src/exec.c: check for cshnullglob in command position.

2015-12-31  Barton E. Schaefer  <schaefer@zsh.org>
